Created clean dataframe

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -22,45 +22,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This is what the dataframe headers will be\n",
-    "#df = pd.DataFrame({\"Title\":title,\"Release Date\":date,\"Inflation Adjusted Domestic Revenue\":inf_adj_dom_rev,\"Domestic Revenue\":dom_rev,\"International Revenue\":inter_rev,\"Total Box Office Revenue\":total_theater_rev,\"Domestic Video Revenue\":dom_video_rev,\"Opening Weekend\":opening_weekend,\"Production Budget\":budget,\"Theater Number\":theaters,\"MPAA Rating\":film_rating,\"Runtime\":runtime,\"Genre\":genre,\"Franchise\":franchise,\"Production Method\":production_method})\n",
     "#Getting dataframe from csv file\n",
-    "df = pd.read_csv(\"Movie_data.csv\")\n",
-    "print(df.head())"
+    "df = pd.read_csv(\"movie_data.csv\")\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "display(df.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a398e292",
+   "id": "0ce5a4d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Adding additional columns for analysis\n",
-    "#Adding season column\n",
-    "\n",
-    "#Adding decade column"
+    "#describing the columns\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f7ab511",
+   "id": "a7ec0bc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Saving new dataframe as csv\n",
-    "df.to_csv(\"Full_movie_data.csv\", index=False)"
+    "#finding correlations\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd8b4a32",
+   "id": "f0051fc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Analyzing:\n"
+    "#checking trends (Ex: Average movie revenue by year)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ace0b66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Notes section\n",
+    "#Write here anything you find interesting that you don't print in any of your cells\n"
    ]
   }
  ],
