--- a/web_scrape.ipynb
+++ b/web_scrape.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d8c3a312",
    "metadata": {},
    "outputs": [
@@ -342,6 +342,8 @@
    ],
    "source": [
     "#using pandas to get all the tables and then turning the relevant ones into dataframes\n",
+    "#Doing 2024-2014 results in (after cleaning) a little over 200 entries. All time frames for runtime are given with this set in mind.\n",
+    "#This cell can be changed to expand the time frame\n",
     "tables1 = pd.read_html(r1.text)\n",
     "tables2 = pd.read_html(r2.text)\n",
     "#getting the relevant tables (2014-2019 and 2020-2024)\n",
