--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -41,6 +41,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9e4589fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#visualizing data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a7ec0bc5",
    "metadata": {},
    "outputs": [],
@@ -71,8 +81,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Final_Movie_Analysis",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
