Setup package environment

--- a/web_scrape.ipynb
+++ b/web_scrape.ipynb
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9cf87038",
    "metadata": {},
    "outputs": [
@@ -2316,6 +2316,7 @@
     "                    \"Total Box Office Revenue\":total_theater_rev,\"Domestic Video Revenue\":dom_video_rev,\"Opening Weekend\":opening_weekend,\"Production Budget\":budget,\n",
     "                    \"Theater Number\":theaters,\"MPAA Rating\":film_rating,\"Runtime\":runtime,\"Genre\":genre,\"Franchise\":franchise,\"Production Method\":production_method,\n",
     "                    \"Video Release Date\":vid_date,\"Domestic DVD Revenue\":dom_dvd_rev,\"Domestic Bluray Revenue\":dom_bluray_rev})\n",
+    "df.to_csv(\"dirty_data.csv\")\n",
     "#Looking at the dataframe for cleaning\n",
     "pd.set_option('display.max_columns', None)\n",
     "display(df.head())"
