fixed spelling errors in analyze

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ea535182",
    "metadata": {},
    "outputs": [],
@@ -11,8 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from pprint import pprint"
+    "import seaborn as sns"
    ]
   },
   {
@@ -673,11 +672,11 @@
     }
    ],
    "source": [
-    "#check coralation between the difrent earnings\n",
+    "#check correlation between the different earnings\n",
     "df.corr(numeric_only=True)\n",
     "\n",
-    "#domestic revanue, internatinal revinue, total box revinue, and domsetic video revinue, are all strongly coralated (between0.9 and 0.8)\n",
-    "# thus we dont need to do analasis for all of them one will strongly coralate with another but a graph to show whis would be good would be good."
+    "#domestic revenue, international revenue, total box revenue, and domestic video revenue, are all strongly correlated (between0.9 and 0.8)\n",
+    "# thus we dont need to do analysis for all of them one will strongly correlate with another but a graph to show which would be good."
    ]
   },
   {
@@ -728,7 +727,7 @@
     }
    ],
    "source": [
-    "# graph of the revinues\n",
+    "# graph of the revenues\n",
     "mean_of = pd.DataFrame()\n",
     "\n",
     "mean_of = df.groupby('Release Date')[['Inflation Adjusted Domestic Revenue','Domestic Revenue', 'Total Box Office Revenue','International Revenue','Domestic Video Revenue']].mean()\n",
@@ -740,7 +739,7 @@
     "mean_of[['Total Box Office Revenue','International Revenue']].plot()\n",
     "plt.xticks(rotation=45)\n",
     "\n",
-    "# the graphes show the coralations  and the difrence in there earnings\n"
+    "# the graphs show the correlations  and the difference in there earnings\n"
    ]
   },
   {
@@ -841,12 +840,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# peoduct budget is most strongly coralated with internatinal earnings, this implys that the hight erning movies had the most funding (on avrage)\n",
+    "# product budget is most strongly correlated with international earnings, this implies that the hight earning movies had the most funding (on average)\n",
     "\n",
-    "# run time isnt strongly coralated with anything but its stronges coralation (0.3) is with product budget, this could mean tha with more budget \n",
-    "# you make longer movies and there for do better but no defanit information on this\n",
+    "# run time isn't strongly correlated with anything but its strongest correlation (0.3) is with product budget, this could mean tha with more budget \n",
+    "# you make longer movies and there for do better but no definite information on this\n",
     "\n",
-    "#most of the numaric vareables seem unintoresting so i will move on"
+    "#most of the numeric variables seem uninteresting so I will move on"
    ]
   },
   {
@@ -925,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
