basic quarto preview working

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cf1cee46",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
     "# catigorical vareable enalasis\n",
     "\n",
     "df.boxplot(column='Inflation Adjusted Domestic Revenue', by='Season')\n",
-    "plt.title('revinue by season of movie relase')\n",
+    "plt.title('revnue by season of movie relase')\n",
     "plt.show()\n"
    ]
   },
