--- a/ml_testing.ipynb
+++ b/ml_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "17f0735a",
    "metadata": {},
    "outputs": [
@@ -19,20 +19,15 @@
     "#importing stuff\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV, RandomizedSearchCV\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, f1_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
-    "from scipy.stats import randint\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.inspection import permutation_importance\n",
     "import shap\n",
-    "\n",
     "#sns.set(style = \"darkgrid\")"
    ]
   },
@@ -216,13 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "627c392d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Log-transform the target due to skewness of target\n",
-    "df_ml[\"log_revenue\"] = np.log1p(df[\"Total Box Office Revenue\"])\n",
+    "df_ml[\"log_revenue\"] = np.log1p(df_ml[\"Total Box Office Revenue\"])\n",
     "\n",
     "y = df_ml[\"log_revenue\"]\n",
     "X = df_ml[[\"Inflation Adjusted Domestic Revenue\",\"Domestic Revenue\",\"Domestic Video Revenue\",\"Opening Weekend\",\"Production Budget\",\"Theater Number\",\"Runtime\",\"Domestic DVD Revenue\",\"Domestic Bluray Revenue\",\"Month\",\"Year\",\"Profit\"]]\n"
@@ -2779,53 +2774,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "id": "0dd9dbde",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Production Budget    0.553863\n",
-       "Runtime              0.272461\n",
-       "Month                0.173676\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Production Budget    0.553863\n",
+      "Runtime              0.272461\n",
+      "Month                0.173676\n",
+      "dtype: float64\n"
+     ]
     }
    ],
    "source": [
     "rf_importances = pd.Series(model.feature_importances_, index=X.columns)\n",
-    "rf_importances.sort_values(ascending=False)"
+    "print(rf_importances.sort_values(ascending=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "id": "b9dfe3e1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Production Budget    1.357111\n",
-       "Runtime              0.421171\n",
-       "Month                0.307424\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Production Budget    1.357111\n",
+      "Runtime              0.421171\n",
+      "Month                0.307424\n",
+      "dtype: float64\n"
+     ]
     }
    ],
    "source": [
     "perm = permutation_importance(model, X, y, n_repeats=20, random_state=42)\n",
     "perm_importances = pd.Series(perm.importances_mean, index=X.columns)\n",
-    "perm_importances.sort_values(ascending=False)"
+    "print(perm_importances.sort_values(ascending=False))"
    ]
   },
   {
