Added extra info to web_scrape and functions

--- a/web_scrape.ipynb
+++ b/web_scrape.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a53e79e",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8c22e3cf",
    "metadata": {},
    "outputs": [
@@ -1596,6 +1596,7 @@
     "i = -1\n",
     "#Just for me to see times during this\n",
     "start = time.time()\n",
+    "print(\"Starting first section\")\n",
     "for k,section in enumerate(sections):\n",
     "    for url in section:\n",
     "        i += 1\n",
@@ -1666,6 +1667,7 @@
     "            continue\n",
     "        #if it doesn't we add it to marked\n",
     "        marked[i] = url\n",
+    "        print(f\"Added url number: {i}, which is {url}, to marked at ~{(time.time()-start)//60} minutes\")\n",
     "    #Getting time so I know its working\n",
     "    print(f\"Time of section {k+1}/{len(sections)} completion: ~{(time.time()-start)//60} minutes\")\n",
     "#pretty printing it so I can read it    \n",
