updataed some stuff on tech report and one or 2 in analasis

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -681,6 +681,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "a569acbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Title                                    0\n",
+       "Release Date                            62\n",
+       "Inflation Adjusted Domestic Revenue     24\n",
+       "Domestic Revenue                        24\n",
+       "International Revenue                   25\n",
+       "Total Box Office Revenue                25\n",
+       "Domestic Video Revenue                  61\n",
+       "Opening Weekend                         27\n",
+       "Production Budget                       64\n",
+       "Theater Number                          27\n",
+       "MPAA Rating                              7\n",
+       "Runtime                                 12\n",
+       "Genre                                    3\n",
+       "Franchise                              146\n",
+       "Production Method                        3\n",
+       "Video Release Date                      74\n",
+       "Domestic DVD Revenue                    66\n",
+       "Domestic Bluray Revenue                 63\n",
+       "Month                                   62\n",
+       "Year                                    62\n",
+       "Season                                  62\n",
+       "Profit                                  67\n",
+       "Release_Date                            62\n",
+       "year                                    62\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "69e92979",
    "metadata": {},
@@ -789,6 +834,39 @@
     "plt.title('Average Revenue by Year')\n",
     "plt.xticks(rotation=45)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3f7c676f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Endless Love\n",
+      "Blackfish\n",
+      "Non-Stop\n",
+      "Neighbors\n",
+      "The Visit\n",
+      "Everest\n",
+      "Legend\n",
+      "The Mummy\n",
+      "Daddy Cool\n",
+      "Breaking In\n",
+      "Halloween\n",
+      "Nobody\n",
+      "Candyman\n",
+      "Firestarter\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''bad_year = df.loc[df['year'] < 2014, 'year']'''\n",
+    "for title in df.loc[df['year'] < 2014, 'Title']:\n",
+    "    print(title)\n"
    ]
   },
   {
