updated functions and web_scraping and fixed some typos in technical_report

--- a/web_scrape.ipynb
+++ b/web_scrape.ipynb
@@ -1610,17 +1610,18 @@
     "            print(f\"currently on i: {i} out of 232, with url: {url}\")\n",
     "            break\n",
     "        #setting up variables\n",
-    "        current = url\n",
     "        title_year = url.rsplit(\"/\", 1)[-1].split(\"#\", 1)[0]\n",
     "        title = re.split(r\"-\\(\\d{4}\\)$\", title_year)[0]\n",
     "        year = int(clean_dict[title])\n",
-    "        #removing year from title \n",
-    "        current = re.sub(r\"-\\(\\d{4}\\)$\", \"\", url)\n",
+    "        #removing year from title\n",
+    "        current = re.sub(r\"-\\(\\d{4}\\)\", \"\", str(url)) \n",
     "        time.sleep(5)\n",
     "        s = requests.get(current,headers=headers)\n",
     "        if s.status_code == 200:\n",
     "            urls[i] = current\n",
     "            continue\n",
+    "        #setting current to be without a year for the following checks\n",
+    "        url = current\n",
     "        #attempting to add country to make url work\n",
     "        current = re.sub(r'(?=#)', f'-({year}-United-Kingdom)', url)\n",
     "        time.sleep(5)\n",
