--- a/technical_report.qmd
+++ b/technical_report.qmd
@@ -33,6 +33,7 @@ Success Criteria:
 ## Methodology
 
 1. _Data acquisition:_ Used common web scraping techniques to obtain data from Wikipedia and The Numbers. Specifically the libraries: requests and beautiful soup. `TODO - outline collection scripts/APIs`
+
 2. _Cleaning pipeline:_ `TODO - summarize transformations and validations implemented`
 * Separated Release Date into Year and Month, and used month to create a new column called Season
 * Changed all revenue numbers from strings containing $ to proper integers. 
@@ -45,6 +46,7 @@ Success Criteria:
 - MPAA Rating specifics
 * Created a profits column by taking Total Box Office Revenue - Budget
 * A separated .csv was created for Machine Learning Analysis wherein the target, Total Box Office Revenue, was analyzed as a log of the original target due to the skewness of the target data 
+
 3. _Analysis workflow:_ 
 * coralate all the data to see what has an efect on incume
 * find the NAs for refrence
@@ -52,8 +54,8 @@ Success Criteria:
 * find the avrage revinue for each year and then plot it for clearere visuals
 * find the statistics for some of the means
 * plot the catigorical data with regarrds to the Inflation Adjusted Domestic Revenue
+"we used some basic analasis such as  coralation, plots to visulise it (mostly line plots but some box plots for catagrorical data). this requiered only a few changes such as adding a colume for year or doing basic math, mostly wit dates, to get usable numbers for plots and coralation. there are some NAs in the data set, around 60 to 70 for each columne. the hiest one was 146 but that was Franchise wich wasnt really used in any analasis"
 
-`we used some basic analasis such as  coralation, plots to visulise it (mostly line plots but some box plots for catagrorical data). this requiered only a few changes such as adding a colume for year or doing basic math, mostly wit dates, to get usable numbers for plots and coralation. there are some NAs in the data set, around 60 to 70 for each columne. the hiest one was 146 but that was Franchise wich wasnt really used in any analasis`
 4. _Tooling:_ `TODO - list packages, environments, and reproducibility steps`
 * Packages: The packages used were: 
 - bs4
@@ -73,8 +75,6 @@ Success Criteria:
 * Reproducibility Steps: Run the functions in order as given in the Tutorial
 
 ## Results & Diagnostics
-
-
 
 `_TODO: Summarize the main metrics, charts, or model diagnostics produced. Include links to figures or tables once available._`
 Main Metrics:
