--- a/web_scrape.ipynb
+++ b/web_scrape.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "85537d32",
    "metadata": {},
    "outputs": [
@@ -2875,7 +2875,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "8445a842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Making sure every movie title has its correct year and month if they are missing \n",
+    "movies['Release date'] = pd.to_datetime(movies['Release date'])\n",
+    "lookup = movies.set_index('Title')['Release date']\n",
+    "df['Release Date'] = df['Release Date'].fillna(df['Title'].map(lookup))\n",
+    "cols = [\"Release Date\", \"Video Release Date\"]\n",
+    "df[cols] = df[cols].apply(pd.to_datetime, errors=\"coerce\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "9f8b01ca",
    "metadata": {},
    "outputs": [
@@ -2883,47 +2898,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          Title Release Date  Inflation Adjusted Domestic Revenue  \\\n",
-      "0    Ride Along   2014-01-17                          185781023.0   \n",
-      "1  Endless Love   1981-07-17                          134255389.0   \n",
-      "2     Blackfish   2013-07-19                            2884649.0   \n",
-      "3      Non-Stop   2000-11-10                              80663.0   \n",
-      "4     Neighbors   1981-12-18                          120158888.0   \n",
+      "   Unnamed: 0         Title Release Date  Inflation Adjusted Domestic Revenue  \\\n",
+      "0           0    Ride Along   2014-01-17                          185781035.0   \n",
+      "1           1  Endless Love   2014-02-14                           32446343.0   \n",
+      "2           2     Blackfish   2013-07-19                            2884649.0   \n",
+      "3           3      Non-Stop   2000-11-10                              80663.0   \n",
+      "4           4     Neighbors   1981-12-18                          120158888.0   \n",
       "\n",
       "   Domestic Revenue  International Revenue  Total Box Office Revenue  \\\n",
       "0       134202565.0             19531235.0               153733800.0   \n",
-      "1        33000000.0                    NaN                       NaN   \n",
+      "1        23438250.0             11279923.0                34718173.0   \n",
       "2         2073582.0               281293.0                 2354875.0   \n",
       "3           38442.0                    NaN                       NaN   \n",
       "4        29916207.0                    NaN                       NaN   \n",
       "\n",
-      "   Domestic Video Revenue  Opening Weekend  Production Budget  Theater Number  \\\n",
-      "0              32235491.0       41516170.0         25000000.0          2867.0   \n",
-      "1                     NaN        4162921.0                NaN           632.0   \n",
-      "2               1885360.0          75962.0                NaN            99.0   \n",
-      "3                     NaN          23402.0                NaN            16.0   \n",
-      "4                 36651.0        6481386.0                NaN          1415.0   \n",
+      "   Domestic Video Revenue  Opening Weekend  Production Budget  ...  \\\n",
+      "0              32235555.0       41516170.0         25000000.0  ...   \n",
+      "1               5650051.0       13307125.0         20000000.0  ...   \n",
+      "2               1885864.0          75962.0                NaN  ...   \n",
+      "3                     NaN          23402.0                NaN  ...   \n",
+      "4                 36651.0        6481386.0                NaN  ...   \n",
       "\n",
-      "  MPAA Rating  Runtime         Genre   Franchise Production Method  \\\n",
-      "0          PG    100.0        Comedy  Ride Along       Live Action   \n",
-      "1           R    116.0         Drama         NaN       Live Action   \n",
-      "2          PG     83.0   Documentary         NaN       Live Action   \n",
-      "3   Not Rated      NaN           NaN         NaN               NaN   \n",
-      "4           R     94.0  Black Comedy         NaN       Live Action   \n",
+      "          Genre   Franchise  Production Method Video Release Date  \\\n",
+      "0        Comedy  Ride Along        Live Action         2014-04-15   \n",
+      "1         Drama         NaN        Live Action         2014-05-27   \n",
+      "2   Documentary         NaN        Live Action         2013-11-12   \n",
+      "3           NaN         NaN                NaN                NaT   \n",
+      "4  Black Comedy         NaN        Live Action         2019-03-12   \n",
       "\n",
-      "  Video Release Date  Domestic DVD Revenue  Domestic Bluray Revenue  Month  \\\n",
-      "0         2014-04-15            21354607.0               10880884.0    1.0   \n",
-      "1         2015-01-13                   NaN                      NaN    7.0   \n",
-      "2         2013-11-12             1654556.0                 230804.0    7.0   \n",
-      "3                NaT                   NaN                      NaN   11.0   \n",
-      "4         2019-03-12                   NaN                  36651.0   12.0   \n",
+      "  Domestic DVD Revenue Domestic Bluray Revenue Month    Year  Season  \\\n",
+      "0           21354671.0              10880884.0   1.0  2014.0  Winter   \n",
+      "1            4314112.0               1335939.0   2.0  2014.0  Winter   \n",
+      "2            1655060.0                230804.0   7.0  2013.0  Summer   \n",
+      "3                  NaN                     NaN  11.0  2000.0    Fall   \n",
+      "4                  NaN                 36651.0  12.0  1981.0  Winter   \n",
       "\n",
-      "     Year  Season       Profit  \n",
-      "0  2014.0  Winter  128733800.0  \n",
-      "1  1981.0  Summer          NaN  \n",
-      "2  2013.0  Summer          NaN  \n",
-      "3  2000.0    Fall          NaN  \n",
-      "4  1981.0  Winter          NaN  \n"
+      "        Profit  \n",
+      "0  128733800.0  \n",
+      "1   14718173.0  \n",
+      "2          NaN  \n",
+      "3          NaN  \n",
+      "4          NaN  \n",
+      "\n",
+      "[5 rows x 23 columns]\n"
      ]
     }
    ],
@@ -2953,7 +2970,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
+   "id": "b2760954",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2014. 2015. 2016. 2017. 2018. 2019. 2020. 2021. 2022. 2023. 2024.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Removing any rows that have the wrong year\n",
+    "df = df[(df['Year'] >= 2014) & (df['Year'] <= 2024)]\n",
+    "print(pd.unique(df[\"Year\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "b74fadf9",
    "metadata": {},
    "outputs": [],
