--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ea535182",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n"
    ]
   },
   {
