--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -9,12 +9,14 @@
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "id": "88a8e545",
    "metadata": {},
    "outputs": [
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "id": "de53954f",
    "metadata": {},
    "outputs": [
@@ -671,7 +673,7 @@
        "Profit                              -0.013253  1.000000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "id": "a569acbd",
    "metadata": {},
    "outputs": [
@@ -718,7 +720,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "id": "69e92979",
    "metadata": {},
    "outputs": [
@@ -750,7 +752,7 @@
        "  Text(200.0, 0, '')])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "id": "64f7fa1c",
    "metadata": {},
    "outputs": [
@@ -811,7 +813,7 @@
        "  Text(2026.0, 0, '2026')])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -844,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "2f2d0189",
    "metadata": {},
    "outputs": [
@@ -866,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "7ec416d0",
    "metadata": {},
    "outputs": [
@@ -886,7 +888,7 @@
        "  Text(200.0, 0, '')])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -911,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "id": "6288f4c5",
    "metadata": {},
    "outputs": [
@@ -929,7 +931,7 @@
        "  Text(2026.0, 0, '2026')])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -961,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "id": "8fcf082e",
    "metadata": {},
    "outputs": [
@@ -981,7 +983,7 @@
        "  Text(200.0, 0, '')])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1006,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "1d433303",
    "metadata": {},
    "outputs": [],
@@ -1016,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "id": "2158e2b6",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1036,7 @@
        "Name: Inflation Adjusted Domestic Revenue, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "id": "c448b59b",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1069,7 @@
        "Name: Domestic Revenue, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "1bb5bb15",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1098,7 @@
        "Name: International Revenue, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "id": "af2e2d8c",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "cf1cee46",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "id": "ba8d9d5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "204412a2",
    "metadata": {},
    "outputs": [],
@@ -1157,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "885582f1",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1195,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 92,
+   "id": "07b95a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 79548244.13043478\n",
+      "Standard deviation: 76233412.36291839\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Genre</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [mean, std]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered = df[df['Season'] == 'Winter']\n",
+    "mean_val = filtered['Inflation Adjusted Domestic Revenue'].mean()\n",
+    "std_val = filtered['Inflation Adjusted Domestic Revenue'].std()\n",
+    "\n",
+    "print(\"Mean:\", mean_val)\n",
+    "print(\"Standard deviation:\", std_val)\n",
+    "df.groupby('Season')['Inflation Adjusted Domestic Revenue'].agg(['mean','std'])\n",
+    "\n",
+    "\n",
+    "mean_ac.groupby('Genre')['Inflation Adjusted Domestic Revenue'].agg(['mean','std'])\n",
+    "#print(mean_ac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db47df0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the means revinu for each season is as falowes\n",
+    "# fall   mean = 5.57 e^7, sd = 7.17e^7\n",
+    "# spring mena = 9.33 e^7, sd = 1.3 e^8\n",
+    "# summer mean = 1.4 e^8, sd = 1.8 e^8\n",
+    "# winter mean = 7.954 e^7,sd = 7.6 e^7\n",
+    "# the mean for all the data is 1.1 e^8\n",
+    "# spring and sumer are the 2 best season for movie relases though not statisticly significnt for most."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1308d5b9",
    "metadata": {},
    "outputs": [],
@@ -1195,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "3dcf1cc5",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "21626ae5",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "b51a0215",
    "metadata": {},
    "outputs": [],
@@ -1255,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "3fd9bc8b",
    "metadata": {},
    "outputs": [],
@@ -1265,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "b1649361",
    "metadata": {},
    "outputs": [],
