--- a/technical_report.qmd
+++ b/technical_report.qmd
@@ -79,10 +79,37 @@ Success Criteria:
 
 `_TODO: Summarize the main metrics, charts, or model diagnostics produced. Include links to figures or tables once available._`
 Main Metrics:
+the main metrics for the plots and data of importance are as fallowes
+    season of releas:
+        spring has the hiest revinue (there isnt a significant difrence between any except for summer and fall summer is beter (0.011))
+        fall:   mean =  5.5 e^7,    sd = 7.17 e^7
+        winter: mean =  7.9 e^7,    sd = 7.62 e^7
+        spring: mean =  9.3 e^8,    sd = 1.3 e^8
+        summer: mean =  1.493 e^8,  sd = 1.8 e^8
+
+    Genra:
+        the hiest means are in 'Musicals', 'Action', 'Adventuer' with means and sd of
+        Musicals: mean = 1.6 e^8 ,sd = 1.8 e^8
+        Action:   mean = 1.9 e^8 ,sd = 2.18 e^8
+        Adventuer:mean = 1.88 e^8,sd = 1.78 e^8
+
+    Movie Rating:
+        PG: mean = 1.2 e^8 ,sd = 1.5 e^8
+        R: mean = 5.5 e^7  ,sd = 6.4 e^7
+
+    Production Method:
+        Anamation/ Live Actin: mean = 1.58 e^8 ,sd = 1.68 e^8
+        Digital Animation:     mean = 2.1 e^8  ,sd = 1.7 e^8
+
+
+
 
 Charts:
 
 Model Diagnostics:
+mse
+crose valid daion 
+variable and prepostions plot
 
 ## Discussion & Next Steps
 
